feat: 오류 해결 및 리팩토링